UI distortion fixes

--- a/CSS/blog-details.css
+++ b/CSS/blog-details.css
@@ -55,12 +55,12 @@
 
 /* Media Querries */
 @media(min-width: 728px){
-    .grid{
+    .details-grid{
         display: grid;
         /* grid-template-columns: 1fr repeat(2, minmax(auto, 25em)) 1fr; */
         grid-template-columns: repeat(8, 1fr);
     }
-    .content-wrap, #footer div{
+    .details-content-wrap, #footer div{
         grid-column: 2/8;
     }
 
